# FastQueue

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  conanfile.py  vcpkg.json  xmake.lua
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  docs_issue.yml  feature_request.yml  help_wanted.yml
.github/workflows/: ci.yml  deploy-docs.yml
benchmarks/: CMakeLists.txt  throughput_bench.c
cmake/: FastQueueConfig.cmake.in
docs/: index.md  package.json
docs/.vitepress/: config.ts
docs/api/: config.md  errors.md  future.md  memory.md  overview.md  parallel.md  queue.md  scheduler.md  task.md  thread_pool.md  time.md  version.md
docs/examples/: basic-jobs.md  custom-allocator.md  error-handling.md  futures.md  graceful-shutdown.md  index.md  parallel-for.md
docs/guide/: faq.md  futures.md  getting-started.md  installation.md  memory.md  performance.md  quick-start.md  scheduler.md  thread-pool.md  troubleshooting.md
docs/public/: site.webmanifest  sitemap.xml
examples/: CMakeLists.txt  basic_jobs.c  custom_allocator.c  error_handling.c  futures.c  graceful_shutdown.c  parallel_for.c
include/fastqueue/: atomic.h  config.h  errors.h  fastqueue.h  future.h  memory.h  parallel.h  platform.h  queue.h  scheduler.h  task.h  thread_pool.h  time.h  types.h  version.h
src/future/: future.c
src/memory/: memory.c
src/platform/: platform.c
src/queue/: queue.c
src/scheduler/: scheduler.c
src/task/: task.c
src/thread/: thread_pool.c
src/utils/: errors.c  parallel.c  time.c  version.c
tests/: CMakeLists.txt  test_errors.c  test_future.c  test_main.c  test_memory.c  test_platform.c  test_queue.c  test_scheduler.c  test_task.c  test_time.c
